--- a/src/flavors/duwamish_flavor/jstemplates/pages/background.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/background.html
@@ -4,8 +4,10 @@
 
 <p>The history here is rich. The Duwamish Tribe lived along the shores of this river for over 10,000 years, since the last ice age, until they were removed by incoming settlers who came about a century and a half ago.</p>
 
-<p>In 2001, the US Environmental Protection Agency declared the lower 5 miles of the Duwamish to be a superfund site, which mandates a cleanup paid by those responsible for the pollution. After more than a decade of public deliberation, the EPA came to a final decision in December 2014, and ordered a $345 million cleanup to take place over the next 17 years.</p>
+<p>In 2001, the US Environmental Protection Agency declared the lower 5 miles of the Duwamish to be a superfund site, which mandates a cleanup paid by those responsible for the pollution. After more than a decade of public deliberation, the EPA came to a final decision in December 2014, and ordered a $342 million cleanup to take place over the next 17 years.</p>
 
 <p>The responsible parties named so far are Boeing Manufacturing, King County, the City of Seattle, and the Port of Seattle, with several more expected to be named over the coming years.</p>
 
-<p>We hope that 'Hey Duwamish' can be used as a community monitoring system to help ensure that the $345 million is well spent. We want to restore the health of our watershed to its maximum potential and highlight the progress being made through initiatives such as the <a href="http://murray.seattle.gov/murray-announces-funding-for-duwamish-river-community-projects">Duwamish Opportunity Fund</a>.</p>
+<p>We hope that 'Hey Duwamish' can be used as a community monitoring system to help ensure that the $342 million is well spent. We want to restore the health of our watershed to its maximum potential and highlight the progress being made through initiatives such as the <a href="http://murray.seattle.gov/murray-announces-funding-for-duwamish-river-community-projects">Duwamish Opportunity Fund</a>.</p>
+
+<p class="btn btn-block btn-large close-btn">Take me to the map!</p>
