--- a/src/flavors/duwamish_flavor/jstemplates/pages/contribute.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/contribute.html
@@ -1,11 +1,11 @@
-<h1>Contribute</h1>
+<h1>{{#_}}Contribute{{/_}}</h1>
 
-<p>Want to help out? Excellent!</p>
+<p>{{#_}}Want to help out? Excellent!{{/_}}</p>
 
-<p>The best way to be involved is to <a href="/place/new">submit a report</a> on the map, or comment on someone else's report.</p>
+<p>{{#_}}The best way to be involved is to <a href="/place/new">submit a report</a> on the map, or comment on someone else's report.{{/_}}</p>
 
-<p>We can also use help writing <a href="http://github.com/smartercleanup/duwamish">code</a>, designing a better interface, and promoting the project.</p>
+<p>{{#_}}We can also use help writing <a href="http://github.com/smartercleanup/duwamish">code</a>, designing a better interface, and promoting the project.{{/_}}</p>
 
-<p>If you want to see a project like this in your community, let us know!</p>
+<p>{{#_}}If you want to see a project like this in your community, let us know!{{/_}}</p>
 
-<a href="http://eepurl.com/6IfA5">Send us a message</a> and we'll be in touch ;)
+{{#_}}<a href="http://eepurl.com/6IfA5">Send us a message</a> and we'll be in touch ;){{/_}}
