--- a/src/flavors/duwamish_flavor/jstemplates/pages/features.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/features.html
@@ -1,25 +1,25 @@
-<h1>Features</h1>
+<h1>{{#_}}Features{{/_}}</h1>
 
-<p>For users,</p>
+<p>{{#_}}For users,{{/_}}</p>
 
 <ul>
-  <li>a simple map interface, to explore submitted locations and add your own
-  <li>site design that works well on small screens
+  <li>{{#_}}a simple map interface, to explore submitted locations and add your own{{/_}}
+  <li>{{#_}}site design that works well on small screens{{/_}}
 </ul>
 
-<p>For designers and developers,</p>
+<p>{{#_}}For designers and developers,{{/_}}</p>
 
 <ul>
-  <li>flexible text and layout, making it easy to translate the user interface text or customize the sentences used
-  <li>geospatial database, so you can limit contributions to within boundaries, or asiggn neighborhood names
+  <li>{{#_}}flexible text and layout, making it easy to translate the user interface text or customize the sentences used{{/_}}
+  <li>{{#_}}geospatial database, so you can limit contributions to within boundaries, or asiggn neighborhood names{{/_}}
 </ul>
 
-<p>For project managers during a project,</p>
+<p>{{#_}}For project managers during a project,{{/_}}</p>
 
 <ul>
-  <li>simple admin interface
-  <li>blogging tools to create pages or blog posts
-  <li>map and location configuration
-  <li>export to GIS
-  <li>simple status dashboard
+  <li>{{#_}}simple admin interface{{/_}}
+  <li>{{#_}}blogging tools to create pages or blog posts{{/_}}
+  <li>{{#_}}map and location configuration{{/_}}
+  <li>{{#_}}export to GIS{{/_}}
+  <li>{{#_}}simple status dashboard{{/_}}
 </ul>
