--- a/src/flavors/duwamish_flavor/jstemplates/pages/overview.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/overview.html
@@ -1,10 +1,10 @@
-<h1>About</h1>
+<h1>{{#_}}About{{/_}}</h1>
 
-<p>Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.</p>
+<p>{{#_}}Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.{{/_}}</p>
 
 <ul>
-<li>Help us out and <a href="/place/new">submit a report</a> on the map!</li>
-<li>Here's a little <a href="/page/background">background</a> on the lower Duwamish superfund site</li>
+<li>{{#_}}Help us out and <a href="/place/new">submit a report</a> on the map!{{/_}}</li>
+<li>{{#_}}Here's a little <a href="/page/background">background</a> on the lower Duwamish superfund site{{/_}}</li>
 </ul>
 
-<p class="btn btn-block btn-large close-btn">Get started!</p>
+<p class="btn btn-block btn-large close-btn">{{#_}}Get started!{{/_}}</p>
