Localized place-form for raingardens

--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -1,10 +1,9 @@
+        <p class="drag-marker-instructions">{{#_}}Drag the map to your location.{{/_}}</p>
+        <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
 
         <h4 class="">{{ place_config.title }}</h4>
 
-        <p>{{ place_config.help_text }} <a href="{{ place_config.help_url }}">{{ place_config.help_urlanchor }}</a></p>
-
-        <p class="drag-marker-instructions">{{#_}}Drag the map and move the pin to your location.{{/_}}</p>
-        <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
+        <p>{{ place_config.help_text }}</p>
 
         <form id="place-form" class="place-form clearfix">
 
