Update raingardens form help header

--- a/src/flavors/raingardens/jstemplates/place-form.html
+++ b/src/flavors/raingardens/jstemplates/place-form.html
@@ -1,9 +1,9 @@
 <h4 class="">{{ place_config.title }}</h4>
 
-<p>{{ place_config.help_text }}
-  <a href="{{ place_config.help_url }}">{{ place_config.help_urlanchor }}</a>
+<p>Are you registering more than 3 rain gardens?
+  <a href="http://www.stewardshippartners.org/contact-us/">Click here</a>
+  and we will help you.
 </p>
-<p></p>
 
 <p class="drag-marker-instructions">{{#_}}Drag the map and move the pin to your location.{{/_}}</p>
 <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
