Add basic geocoding for a place's address field
fix bug with form field submissions

--- a/src/flavors/raingardens/jstemplates/place-form.html
+++ b/src/flavors/raingardens/jstemplates/place-form.html
@@ -18,6 +18,12 @@
               is already logged in.
       -->
 
+    <div class="geocoding-enabled">
+
+      <div id="geocode-address-place-bar" class="clearfix"></div>
+
+    </div>
+
     {{# place_config.items }}
 
     <p class="{{ type }}">
