--- a/src/flavors/raingardens/jstemplates/place-form.html
+++ b/src/flavors/raingardens/jstemplates/place-form.html
@@ -18,11 +18,6 @@
               is already logged in.
       -->
 
-    <div class="geocoding-enabled">
-
-      <div id="geocode-address-place-bar" class="clearfix"></div>
-
-    </div>
 
     {{# place_config.items }}
 
@@ -36,11 +31,21 @@
       {{/is_authenticated}}
 
 
+      {{#if is_geocoding}}
+      <div class="geocoding-enabled">
+
+        <div id="geocode-address-place-bar" class="clearfix"></div>
+
+      </div>
+      {{/if}}
+
       {{#if is_input}}
       {{#is_submitter_name}}
       {{^is_authenticated}}
       <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../../.. name}}">
-      <span class="or-sign-in">{{#_}}Or sign in with <a class="auth-inline twitter-btn" href="/users/login/twitter/">Twitter</a> <a class="auth-inline facebook-btn" href="/users/login/facebook/">Facebook</a>{{/_}}</span>
+      <span class="or-sign-in">{{#_}}Or sign in with <a class="auth-inline twitter-btn" href="/users/login/twitter/">Twitter</a>
+        <a class="auth-inline facebook-btn" href="/users/login/facebook/">Facebook</a>{{/_}}
+      </span>
       {{/is_authenticated}}
       {{^}}
       <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../.. name}}">
