--- a/src/flavors/raingardens/jstemplates/place-form.html
+++ b/src/flavors/raingardens/jstemplates/place-form.html
@@ -33,9 +33,12 @@
 
       {{#if is_geocoding}}
       <div class="geocoding-enabled">
-
-        <div id="geocode-address-place-bar" class="clearfix"></div>
-
+        <div id="geocode-address-place-bar" class="clearfix">
+          <p class="error is-hidden"></p>
+            <label class="geocode-address-place-label" for="geocode-address-place-field">enter your address here</label>
+            <div class="geocode-place-spinner is-hidden"></div>
+            <input type="text" id="geocode-address-place-field" class="geocode-address-place-field" placeholder="geocode-address-place">
+        </div>
       </div>
       {{/if}}
 
