Inherit geocode form view from map's geocode bar view

--- a/src/flavors/raingardens/jstemplates/place-form.html
+++ b/src/flavors/raingardens/jstemplates/place-form.html
@@ -35,9 +35,9 @@
       <div class="geocoding-enabled">
         <div id="geocode-address-place-bar" class="clearfix">
           <p class="error is-hidden"></p>
-            <label class="geocode-address-place-label" for="geocode-address-place-field"></label>
-            <div class="geocode-place-spinner is-hidden"></div>
-            <input name="{{ name }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} type="text" id="geocode-address-place-field" class="geocode-address-place-field">
+            <label class="geocode-address-label" for="geocode-address-field"></label>
+            <div class="geocode-spinner is-hidden"></div>
+            <input name="{{ name }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} type="text" id="geocode-address-field" class="geocode-address-field">
         </div>
       </div>
       {{/if}}
