--- a/src/flavors/happytrailtest/jstemplates/pages/scarytrail.html
+++ b/src/flavors/happytrailtest/jstemplates/pages/scarytrail.html
@@ -2,8 +2,7 @@
 
 <iframe src="https://player.vimeo.com/video/134796456?color=c9ff23&title=0&byline=0&portrait=0" width="520" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<strong>The youth of South Park hit the trail with a major overhaul.</strong>
+<p><strong>The youth of South Park hit the trail with a major overhaul.</strong></p>
 
-ipsem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+
+<p>ipsem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
