new content for happy trail flavor

--- a/src/flavors/happytrail/jstemplates/pages/achievements.html
+++ b/src/flavors/happytrail/jstemplates/pages/achievements.html
@@ -1,28 +1,18 @@
 <h1>Together, we:</h1>
-
-<h3>Did this many</h3>
-
-ipsem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-<h3>Did that many</h3>
-
-ipsem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-<h3>Did this other great thing</h3>
-
-ipem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<h3>Transformed the space</h3>
+<ul>
+<li>Removed 200 cubic yards of debris and invasive plants.</li>
+<li>Planted over 200 native plants.</li>
+<li>Replaced 100 cubic yards of topsoil and 50 cubic yards of mulch.</li>
+<li>Laid 92 burlap bags</li>
+<li>Hauled out 4 1/2 giant dump truck loads of waste to the city transfer station.</li>
+</ul>
+<h3>Built connections to our neighborhood</h3>
+<ul>
+<li>
+The beautiful new yarn flowers on the fence were made possible by 15 Latina senior women in South Park who partnered with us and spent 100+ hours crocheting and knitting.
+</li>
+<li>
+We unearthed a historical treasure that had been buried and forgotten. An old brick sidewalk that once connected the old neighborhoods together, in an area used to known as "Catholic Hill." Things changed in 1967, when the freeway was constructed and divided the neighborhoods.
+</li>
+</ul>
