--- a/src/flavors/happytrail/jstemplates/pages/scarytrail.html
+++ b/src/flavors/happytrail/jstemplates/pages/scarytrail.html
@@ -2,7 +2,8 @@
 
 <iframe src="https://player.vimeo.com/video/134796456?color=c9ff23&title=0&byline=0&portrait=0" width="520" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<p><strong>The youth of South Park hit the trail with a major overhaul.</strong></p>
-
-
-<p>ipsem Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+<strong>The youth of South Park hit the trail with a major overhaul.</strong>
+Watch the video above for a rundown.
+<br>
+<br>
+<h5><a href="/page/achievements">Here's a list of stats on the work that we did</a></h5>
