--- a/src/flavors/happytrail/jstemplates/pages/scarytrail.html
+++ b/src/flavors/happytrail/jstemplates/pages/scarytrail.html
@@ -2,7 +2,7 @@
 
 <iframe src="https://player.vimeo.com/video/134796456?color=c9ff23&title=0&byline=0&portrait=0" width="520" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<strong>The youth of South Park hit the trail with a major overhaul.</strong>
+<p><strong>The youth of South Park hit the trail with a major overhaul.</strong>
 Watch the video above for a rundown.
 <br>
 <br>
