Only show place detail if there is a value

--- a/src/flavors/raingardens/jstemplates/place-detail.html
+++ b/src/flavors/raingardens/jstemplates/place-detail.html
@@ -41,11 +41,13 @@
     <img src="{{ file }}" class="place-value place-value-{{ name }}" alt="{{ name }}">
   </div>
   {{/ attachments }}
-  {{#each_place_item "submitter_name" "name" "location_type"}}
+  {{#each_place_item "submitter_name" "name" "location_type" }}
+  {{#if value}}
   <div class="place-item place-item-{{ name }}">
     <span class="place-label place-label-{{ name }}">{{ label }}</span>
     <p class="place-value place-value-{{ name }}">{{nlToBr value }}</p>
   </div>
+  {{/if}}
   {{/each_place_item }}
 </section>
 
