fix word misuse 'chartering' with 'charter' on about page

--- a/src/flavors/duwamish_flavor/jstemplates/pages/overview.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/overview.html
@@ -10,5 +10,5 @@
 <p class="btn btn-block btn-large close-btn">{{#_}}Get started!{{/_}}</p>
 <br>
 <br>
-<h5>...please keep in mind, we are chartering new ground and this is early beta software. While it's improving all the time, you may find hiccups. <br><br>
+<h5>...please keep in mind, we are charting new ground and this is early beta software. While it's improving all the time, you may find hiccups. <br><br>
 <p>We welcome you to <a href="/page/contribute">help us</a> make it better!</p></h5>
