--- a/src/flavors/raingardens/jstemplates/place-detail.html
+++ b/src/flavors/raingardens/jstemplates/place-detail.html
@@ -6,7 +6,7 @@
     {{ rain_garden_name}}
     {{^}}
     {{#if rain_garden_number}}
-    Rain Garden {{#thousands_comma rain_garden_number}}{{ garden_number }}{{/thousands_comma}}
+    Rain Garden {{ rain_garden_number }}
     {{^}}
     {{/if}}
     {{/if}}
