change about page

--- a/src/flavors/marra/jstemplates/pages/overview.html
+++ b/src/flavors/marra/jstemplates/pages/overview.html
@@ -1,14 +1,5 @@
-<h1>{{#_}}About{{/_}}</h1>
+<h1>{{#_}}Welcome!{{/_}}</h1>
 
-<p>{{#_}}Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.{{/_}}</p>
+<p>{{#_}}We are gathering feedback for improvements on Marra-Desimone Park. You can <a href="/place/new">add a pin</a> to the map and share your ideas.{{/_}}</p>
 
-<ul>
-<li>{{#_}}Help us out and <a href="/place/new">submit a report</a> on the map!{{/_}}</li>
-<li>{{#_}}Here's a little <a href="/page/background">background</a> on the lower Duwamish superfund site{{/_}}</li>
-</ul>
-
-<p class="btn btn-block btn-large close-btn">{{#_}}Get started!{{/_}}</p>
-<br>
-<br>
-<h5>...please keep in mind, we are charting new ground and this is early beta software. While it's improving all the time, you may find hiccups. <br><br>
-<p>We welcome you to <a href="/page/contribute">help us</a> make it better!</p></h5>
+<a href="/place/new"><p class="btn btn-block btn-large close-btn">{{#_}}Get started!{{/_}}</p></a>
