--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -26,6 +26,24 @@
               <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
               {{/is_authenticated}}
 
+              {{#if is_geocoding}}
+                <div class="geocoding-enabled">
+                  <div id="geocode-address-place-bar" class="clearfix">
+                    <p class="error is-hidden"></p>
+                    <label class="geocode-address-label" for="geocode-address-field"></label>
+                    <div class="geocode-spinner is-hidden"></div>
+                    <input name="{{ name }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} type="text" id="geocode-address-field" class="geocode-address-field">
+                  </div>
+                </div>
+              {{/if}}
+
+              {{#if is_checkbox_list}}
+                {{# attrs }}
+                  <br>
+                  <input id="place-{{ value }}" type="checkbox" name="{{ ../name }}" value="{{ value }}" />
+                  <label for="place-{{ value }}">{{ label}} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
+                {{/ attrs }}
+              {{/if}}
 
               {{#if is_input}}
                 {{#is_submitter_name}}
