--- a/src/sa_web/jstemplates/legend.html
+++ b/src/sa_web/jstemplates/legend.html
@@ -28,7 +28,11 @@
                  class="map-legend-checkbox" type="checkbox"></input>
           <label for="map-{{ id }}">{{ title }}</label>
         </div>
-        <span class="layer-type-description">{{ description }}</span>
+        <span class="layer-type-description">{{ description }}
+          {{#if description-image}}
+            <img src="{{ description-image }}" alt="{{ description-image-alt }}">
+          {{/if}}
+        </span>
       </li>
     {{/if}}
   {{/ layers.items }}
