update about page

--- a/src/flavors/duwamish_flavor/jstemplates/pages/overview.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/overview.html
@@ -1,14 +1,13 @@
-<h1>{{#_}}About{{/_}}</h1>
+<h1>{{#_}}Welcome{{/_}}</h1>
 
-<p>{{#_}}Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.{{/_}}</p>
+<p>{{#_}}We are a community of residents and stakeholders who are monitoring environmental health issues in Seattle's Duwamish Valley.{{/_}}</p>
 
 <ul>
 <li>{{#_}}Help us out and <a href="/place/new">submit a report</a> on the map!{{/_}}</li>
-<li>{{#_}}Here's a little <a href="/page/background">background</a> on the lower Duwamish superfund site{{/_}}</li>
+<li>{{#_}}Here's a little <a href="/page/background">background</a> on the lower Duwamish superfund site and the cleanup of toxic waste in the river.{{/_}}</li>
 </ul>
 
-<p class="btn btn-block btn-large close-btn">{{#_}}Get started!{{/_}}</p>
+<p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
 <br>
 <br>
-<h5>...please keep in mind, we are charting new ground and this is early beta software. While it's improving all the time, you may find hiccups. <br><br>
-<p>We welcome you to <a href="/page/contribute">help us</a> make it better!</p></h5>
+Seed funding provided by the Puget Sound Stewardship and Mitigation Fund, a community grantmaking fund created by Puget Soundkeeper Alliance and administered by the Rose Foundation for Communities and the Environment.
