add sponsor page with logos

--- a/src/flavors/duwamish_flavor/jstemplates/pages/overview.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/overview.html
@@ -10,4 +10,4 @@
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
 <br>
 <br>
-Seed funding provided by the Puget Sound Stewardship and Mitigation Fund, a community grantmaking fund created by Puget Soundkeeper Alliance and administered by the Rose Foundation for Communities and the Environment.
+This project made possible by our generous <a href="/page/sponsors">sponsors</a>.
