--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -17,7 +17,7 @@
 
             {{# place_config.items }}
 
-            <p class="{{ type }}">
+            <div class="{{ type }}">
               {{#is_authenticated}}
                 {{^is_submitter_name}}
                 <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
@@ -90,9 +90,10 @@
               {{/is_file}}
 
               {{#if help_text }}
-              <div class="help-text place-{{ name }}-help-text">{{ help_text }}</div>
+                <div class="help-text place-{{ name }}-help-text">{{ help_text }}</div>
               {{/if}}
-            </p>
+            </div>
+            <br>
             {{/ place_config.items }}
           </fieldset>
 
