Update rain garden formatting and comments

--- a/src/flavors/raingardens/jstemplates/place-form.html
+++ b/src/flavors/raingardens/jstemplates/place-form.html
@@ -1,5 +1,6 @@
 <h4 class="">{{ place_config.title }}</h4>
 
+<!-- TODO Refactor this into sa_web place-form -->
 <p>Are you registering more than 3 rain gardens?
   <a href="http://www.stewardshippartners.org/contact-us/">Click here</a>
   and we will help you.
