--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -2,7 +2,7 @@
         <p class="drag-marker-instructions">{{#_}}First drag the map to set your pin's location.{{/_}}</p>
         <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
 
-        <p>{{ place_config.help_text }}</p>
+        <p class="form-field">{{ place_config.help_text }}</p>
 
         <form id="place-form" class="place-form clearfix">
 
@@ -93,7 +93,7 @@
               {{/if}}
             </div>
             <!-- TODO Use custom whitespace via CSS instead of p tags -->
-            <p></p>
+            <div class="form-field"></div>
             {{/ place_config.items }}
           </fieldset>
 
