--- a/src/flavors/raingardens/jstemplates/place-form.html
+++ b/src/flavors/raingardens/jstemplates/place-form.html
@@ -7,7 +7,7 @@
 </p>
 
 <p class="drag-marker-instructions">{{#_}}Drag the map and move the pin to your location.{{/_}}</p>
-<p class="drag-marker-warning is-visuallyhidden">{{#_}}<p> It looks like you didn't set your location yet. Please drag the map to your location.</p>{{/_}}</p>
+<p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
 
 <form id="place-form" class="place-form clearfix">
 
