Use css .form-field spacing instead of <br>

--- a/src/flavors/raingardens/jstemplates/place-form.html
+++ b/src/flavors/raingardens/jstemplates/place-form.html
@@ -113,7 +113,7 @@
           {{/if}}
 
         </div>
-        <br>
+        <div class="form-field"></div>
       {{/if}}
     {{/ place_config.items }}
   </fieldset>
