add new landing page text and nudge map coordinates to better center Georgetown

--- a/src/flavors/georgetowngreen/jstemplates/pages/overview.html
+++ b/src/flavors/georgetowngreen/jstemplates/pages/overview.html
@@ -1,5 +1,8 @@
 <h1>{{#_}}Welcome!{{/_}}</h1>
 
-<p>{{#_}}We are gathering ideas for green spaces in Georgetown for the upcoming vision plan by the Seattle Parks Foundation. You can <a href="/place/new">add a pin</a> to the map and share your ideas.{{/_}}</p>
+<p>{{#_}}Please help Hey Duwamish! and the Seattle Parks Foundation gather ideas for green spaces in Georgetown for the upcoming community vision plan. 
+<p>You can <a href="/place/new">add a pin</a> to the map and share your ideas.{{/_}}</p>
 
 <a href="/place/new"><p class="btn btn-block btn-large close-btn">{{#_}}Get started!{{/_}}</p></a>
+<br>
+This is above all a community driven effort...
