Add header for map layers pullout tab

--- a/src/sa_web/jstemplates/legend.html
+++ b/src/sa_web/jstemplates/legend.html
@@ -1,3 +1,5 @@
+<h1 class="sidebar-header">Legend<div class="sidebar-close"><i class="fa fa-caret-left"></i></div></h1>
+
 <!-- SHAREABOUTS LAYERS -->
 <p>{{ reports.title }}:</p>
 <ul class="master-layer-list unstyled-list">
