--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -112,3 +112,136 @@
   <div class="form-spinner"></div>
 
 </form>
+
+<div class="row">
+  <div class="columns">
+
+    <div data-alert class="alert-box warning radius text-center form-instructions">
+      <strong>Drag the map to your location.</strong>
+    </div>
+
+    <form novalidate>
+
+      <h3><strong>What would you like to share?</strong></h3>
+
+      <input id="favorite-destination" type="radio" name="category" value="favorite-destination" class="toggle-sibling-input toggle-sibling-input-1" required>
+      <label style="min-width:40%;" for="favorite-destination" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius"><img class="inline-icon large" src="//openplans.github.io/planbox-themes/map-markers/fav-route.png">&nbsp;<strong>Favorite Destination</strong></label>
+
+      <input id="good-route" type="radio" name="category" value="good-route" class="toggle-sibling-input toggle-sibling-input-2" required>
+      <label style="min-width:40%;" for="good-route" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius"><img class="inline-icon large" src="//openplans.github.io/planbox-themes/map-markers/thumbs-up.png">&nbsp;<strong>Desirable Bike Route</strong></label>
+
+      <input id="difficult-crossing" type="radio" name="category" value="difficult-crossing" class="toggle-sibling-input toggle-sibling-input-3" required>
+      <label style="min-width:40%;" for="difficult-crossing" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius"><img class="inline-icon large" src="//openplans.github.io/planbox-themes/map-markers/bike-crossing.png">&nbsp;<strong>Difficult Crossing</strong></label>
+
+      <input id="bad-route" type="radio" name="category" value="bad-route" class="toggle-sibling-input toggle-sibling-input-4" required>
+      <label style="min-width:40%;" for="bad-route" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius"><img class="inline-icon large" src="//openplans.github.io/planbox-themes/map-markers/thumbs-down.png">&nbsp;<strong>Undesirable Bike Route</strong></label>
+
+      <label class="toggle-sibling-1">Location
+        <textarea name="location-name" placeholder="Location..." required></textarea>
+      </label>
+
+      <label class="toggle-sibling-3">What street/intersection is this?
+        <textarea name="street-name" placeholder="Street..." required></textarea>
+      </label>
+
+      <label class="toggle-sibling-2 toggle-sibling-4">What street/route is this?
+        <textarea name="street-name" placeholder="Street..." required></textarea>
+      </label>
+
+      <div class="toggle-sibling-3">
+        <label>What's at this intersection?</label>
+        <input id="traffic-signal" type="radio" name="crossing-type" value="traffic-signal" class="hide">
+        <label for="traffic-signal" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button small radius" required><strong>Traffic Signal</strong></label>
+        <input id="stop-sign" type="radio" name="crossing-type" value="stop-sign" class="hide">
+        <label for="stop-sign" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button small radius"><strong>Stop Sign</strong></label>
+        <input id="none" type="radio" name="crossing-type" value="none" class="hide">
+        <label for="none" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button small radius"><strong>Neither</strong></label>
+      </div>
+
+      <div class="toggle-sibling-1 toggle-sibling-2 toggle-sibling-3 toggle-sibling-4">
+        <label>Description</label>
+        <textarea name="description" placeholder="..." required></textarea>
+
+        {{#if submitter}}
+        <label>Your Email
+          <input type="email" name="private_email" placeholder="optional" data-sticky />
+        </label>
+        {{else}}
+        <div class="row">
+          <div class="large-6 columns">
+            <label>Your Name
+              <input type="text" name="submitter_name" required data-sticky />
+            </label>
+          </div>
+          <div class="large-6 columns">
+            <label>Your Email
+              <input type="email" name="private_email" placeholder="optional" data-sticky />
+            </label>
+          </div>
+        </div>
+        <p class="text-right text-small no-margins"><span class="or-sign-in">Or sign in with <a class="auth-inline shareabouts-auth-twitter-button" href="#">TWITTER</a> / <a class="auth-inline shareabouts-auth-facebook-button" href="#">FACEBOOK</a></span></p>
+        {{/if}}
+
+        <p class="some-padding-top some-margin-bottom"><strong>Please provide some optional/private information about yourself.</strong></p>
+
+        <input id="private-questions-yes" type="radio" name="private-questions" class="toggle-sibling-input toggle-sibling-input-10">
+        <label for="private-questions-yes" class="toggle-sibling-label button small less-padding radius no-margin-left some-margin-bottom">Okay</label>
+
+        <input id="private-questions-no" type="radio" name="private-questions" class="toggle-sibling-input toggle-sibling-input-11">
+        <label for="private-questions-no" class="toggle-sibling-label button small less-padding radius no-margin-left some-margin-bottom">Decline</label>
+
+        <div class="toggle-sibling-10">
+          <div class="row collapse prefix-radius">
+            <div class="small-3 columns">
+              <label for="private-zip" class="prefix">Home ZIP Code</label>
+            </div>
+            <div class="small-9 columns">
+              <input type="text" name="private-zip" id="private-zip" pattern="\d*" data-sticky />
+            </div>
+          </div>
+          <div class="row collapse prefix-radius">
+            <div class="small-3 columns">
+              <label for="private-age" class="prefix">Age</label>
+            </div>
+            <div class="small-9 columns">
+              <input type="number" name="private-age" id="private-age" data-sticky />
+            </div>
+          </div>
+          <div class="row collapse prefix-radius">
+            <div class="small-3 columns">
+              <label for="private-gender" class="prefix">Gender</label>
+            </div>
+            <div class="small-9 columns">
+              <select name="private-gender" id="private-gender" data-sticky>
+                <option></option>
+                <option value="female">Female</option>
+                <option value="male">Male</option>
+                <option value="other">Other</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="row some-padding-top toggle-sibling-10 toggle-sibling-11">
+          <div class="medium-6 columns">
+            <input type="submit" value="Put On Map" class="button large expand radius shareabouts-submit-button"/>
+          </div>
+          <div class="medium-6 columns signed-in-as">
+            {{#if submitter}}
+            <img src="{{ submitter.avatar_url }}" class="avatar" /> {{ submitter.name }}
+            {{/if}}
+          </div>
+        </div>
+
+      </div>
+    </form>
+
+  </div>
+</div>
+
+<script type="text/javascript">
+  $( "#place-location_type" ).change(function() {
+    console.log("Handler for .change() called.");
+    alert( "Handler for .change() called." );
+  });
+</script>
