--- a/src/sa_web/jstemplates/add-places.html
+++ b/src/sa_web/jstemplates/add-places.html
@@ -3,4 +3,5 @@
     <a href="#" id="add-place" class="btn btn-block btn-primary btn-large"><span>{{ add_button_label }}</span></a>
   </div>
   <span id="centerpoint"><span class="shadow"></span><span class="x"></span><span class="marker"></span></span>
+  <span>Test</span>
 {{/ adding_supported }}
