--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -1,114 +1,133 @@
+<h4 class="">{{ place_config.title }}</h4>
 <p class="drag-marker-instructions">{{#_}}First drag the map to set your pin's location.{{/_}}</p>
 <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
 
 <p class="form-field">{{ place_config.help_text }}</p>
 
-<h3 class="">{{ place_config.title }}</h3>
+<form id="place-form" class="place-form clearfix">
 
-<form novalidate id="dev-place-form-choice" class="dev-place-form-choice clearfix">
-  <fieldset class="report-type">
-    <input id="observation-choice" type="radio" name="category" value="observation-choice" class="toggle-sibling-input toggle-sibling-input-1" required>
-    <label style="min-width:40%;" for="observation-choice" class="observation-label toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius">
+  <div id="place-form-type-choice" class="place-form-type-choice clearfix">
+    <a id="observation-form-type" href="/place/new/observation" class="button">
       <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-observation.png">
       <strong>Observation</strong>
-    </label>
-
-    <input id="question-choice" type="radio" name="category" value="question-choice" class="toggle-sibling-input toggle-sibling-input-2" required>
-    <label style="min-width:40%;" for="question-choice" class="question-label toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius">
+    </a>
+    <a id="question-form-type" href="/place/new/question" class="button">
       <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-question.png">
       <strong>Question</strong>
-    </label>
-
-    <input id="idea-choice" type="radio" name="category" value="idea-choice" class="toggle-sibling-input toggle-sibling-input-3" required>
-    <label style="min-width:40%;" for="idea-choice" class="idea-label toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius">
+    </a>
+    <a id="idea-form-type" href="/place/new/idea" class="button">
       <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-idea.png">
       <strong>Idea</strong>
-    </label>
-
-    <input id="complaint-choice" type="radio" name="category" value="complaint-choice" class="toggle-sibling-input toggle-sibling-input-4" required>
-    <label style="min-width:40%;" for="complaint-choice" class="complaint-label toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius">
+    </a>
+    <a id="complaint-form-type" href="/place/new/complaint" class="button">
       <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-complaint.png">
       <strong>Complaint</strong>
-    </label>
-
-  </fieldset>
-</form>
-
-<form id="dev-place-choice-child-form" class="dev-place-choice-child-form clearfix">
+    </a>
+  </div>
 
   <fieldset>
-    <div class="text form-field">
-      <label for="place-name">Title of report <small>(optional)</small></label>
-      <input id="place-name" name="name" type="text" placeholder="Enter title" size="30" value="">
-    </div>
+    <input type="hidden" name="visible" value="on">
+    <input type="hidden" name="user_token" value="{{{ user_token }}}">
 
-    <div class="text form-field">
-      <label for="place-submitter_name">Your Name <small>(optional)</small></label>
-      <input id="place-submitter_name" name="submitter_name" type="text" placeholder="Name" size="30" value="">
-      <span class="or-sign-in">Or sign in with <a class="auth-inline twitter-btn" href="/users/login/twitter/">Twitter</a> <a class="auth-inline facebook-btn" href="/users/login/facebook/">Facebook</a></span>
-    </div>
+    <!-- TODO We need user data in the template to know whether a user
+         is already logged in.
+       -->
 
-    <div class="text form-field">
-      <label for="place-private-submitter_email">Your Email <small>(optional)</small></label>
-      <input id="place-private-submitter_email" name="private-submitter_email" type="text" placeholder="Email address" size="30" value="">
-    </div>
+    {{# place_config.items }}
 
-    <div class="textarea form-field">
-      <label for="place-description">Description <small>(optional)</small></label>
-      <textarea id="place-description" name="description" placeholder="Description..." data-gramm="" data-txt_gramm_id="2bec75f0-5935-f338-ea9a-2d155d91e6b5"></textarea>
-    </div>
+      <div class="{{ type }} form-field">
+        {{#is_authenticated}}
+          {{^is_submitter_name}}
+            <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
+          {{/is_submitter_name}}
+          {{^}}
+          <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
+        {{/is_authenticated}}
 
-    <div class="file form-field">
-      <label for="place-my_image">Image <small>(optional)</small></label>
-      <!--[if lt IE 10 ]><br>Sorry, your browser isn't compatible with our file upload method.<![endif]-->
-      <!--[if (gt IE 9)|!(IE)]><!-->
-      <span class="fileinput-container btn btn-small">
-        <span>Add an Image</span>
-        <input id="place-my_image" name="my_image" type="file" accept="image/*">
-      </span>
-      <span class="fileinput-name">
+        {{#if is_hidden}}
+          <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" key="hidden"
+                 {{#attrs}}
+                 {{ key }}="{{ value }}"
+                 {{/attrs}} value="{{value}}">
+        {{/if}}
 
-      </span>
-      <!--<![endif]-->
-    </div>
+        {{#if is_geocoding}}
+          <div class="geocoding-enabled">
+            <div id="geocode-address-place-bar" class="clearfix">
+              <p class="error is-hidden"></p>
+              <label class="geocode-address-label" for="geocode-address-field"></label>
+              <div class="geocode-spinner is-hidden"></div>
+              <input name="{{ name }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} type="text" id="geocode-address-field" class="geocode-address-field">
+            </div>
+          </div>
+        {{/if}}
+
+        {{#if is_checkbox_list}}
+          {{# attrs }}
+            <br>
+            <input id="place-{{ value }}" type="checkbox" name="{{ ../name }}" value="{{ value }}" />
+            <label for="place-{{ value }}">{{ label}} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
+          {{/ attrs }}
+        {{/if}}
+
+        {{#if is_input}}
+          {{#is_submitter_name}}
+            {{^is_authenticated}}
+              <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../../.. name}}">
+              <span class="or-sign-in">{{#_}}Or sign in with <a class="auth-inline twitter-btn" href="/users/login/twitter/">Twitter</a> <a class="auth-inline facebook-btn" href="/users/login/facebook/">Facebook</a>{{/_}}</span>
+            {{/is_authenticated}}
+            {{^}}
+            <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../.. name}}">
+          {{/is_submitter_name}}
+        {{/if}}
+
+        {{#is_textarea}}
+          <textarea id="place-{{ name }}" name="{{ name }}"{{#attrs}} {{ key }}="{{ value }}"{{/attrs}}>{{get_value ../.. name}}</textarea>
+        {{/is_textarea}}
+
+        {{#is_select}}
+          <select id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}}>
+            {{#select_item_value ../.. name}}
+              {{# options }}
+                {{#if label}}
+                  <option value="{{value}}">{{label}}</option>
+                {{else}}
+                  <option value="{{.}}">{{.}}</option>
+                {{/if}}
+              {{/ options }}
+            {{/select_item_value}}
+          </select>
+        {{/is_select}}
+
+        {{#is_file}}
+          <!--[if lt IE 10 ]><br>Sorry, your browser isn't compatible with our file upload method.<![endif]-->
+          <!--[if (gt IE 9)|!(IE)]><!-->
+          <span class="fileinput-container btn btn-small{{^is_fileinput_supported}} btn-disabled{{/is_fileinput_supported}}">
+            <span>{{ inputfile_label }}</span>
+            <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}"
+                   {{#attrs}} {{ key }}="{{ value }}"{{/attrs}}
+                   {{^is_fileinput_supported}} disabled{{/is_fileinput_supported}}>
+          </span>
+          <span class="fileinput-name">
+            {{^is_fileinput_supported}}{{#_}}Sorry, your browser doesn't support file uploads.{{/_}}{{/is_fileinput_supported}}
+          </span>
+          <!--<![endif]-->
+        {{/is_file}}
+
+        {{#if help_text }}
+          <div class="help-text place-{{ name }}-help-text">{{ help_text }}</div>
+        {{/if}}
+      </div>
+    {{/ place_config.items }}
   </fieldset>
 
-  <input name="save-place-btn" id="save-place-btn" type="submit" value="Put it on the map!" class="btn btn-primary submit-btn">
+  <input name="save-place-btn" id="save-place-btn" type="submit" value="{{ place_config.submit_button_label }}" class="btn btn-primary submit-btn">
+
+  {{#is_authenticated}}
+    <p class="signed-in-as"><img src="{{ current_user "avatar_url" }}" class="avatar" /> {{ current_user "name" }}. <a class="" href="/users/logout/">{{#_}}Log Out{{/_}}</a></p>
+    {{^}}
+  {{/is_authenticated}}
+
   <div class="form-spinner"></div>
 
 </form>
-
-<script type="text/javascript">
-  $( "#observation-choice" ).change(function() {
-    $( "#dev-place-choice-child-form" ).hide( "fast", function() {
-      console.log( "Animation complete." );
-    });
-    $( "#dev-place-choice-child-form" ).show( "fast", function() {
-      console.log( "Animation complete." );
-    });
-  });
-  $( "#question-choice" ).change(function() {
-    $( "#dev-place-choice-child-form" ).hide( "fast", function() {
-      console.log( "Animation complete." );
-    });
-    $( "#dev-place-choice-child-form" ).show( "fast", function() {
-      console.log( "Animation complete." );
-    });
-  });
-  $( "#idea-choice" ).change(function() {
-    $( "#dev-place-choice-child-form" ).hide( "fast", function() {
-      console.log( "Animation complete." );
-    });
-    $( "#dev-place-choice-child-form" ).show( "fast", function() {
-      console.log( "Animation complete." );
-    });
-  });
-  $( "#complaint-choice" ).change(function() {
-    $( "#dev-place-choice-child-form" ).hide( "fast", function() {
-      console.log( "Animation complete." );
-    });
-    $( "#dev-place-choice-child-form" ).show( "fast", function() {
-      console.log( "Animation complete." );
-    });
-  });
-</script>
