Update form title copy

--- a/src/sa_web/jstemplates/place-type-form.html
+++ b/src/sa_web/jstemplates/place-type-form.html
@@ -1,4 +1,4 @@
-<h2>Form Title</h2>
+<h2>Choose a report type</h2>
 
 <div id="place-form-type-choice" class="place-form-type-choice clearfix">
   <a id="observation-form-type" href="/place/new/observation" class="button">
