fix green screen page styling plus new elements

--- a/src/flavors/duwamish_flavor/jstemplates/pages/greenscreen.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/greenscreen.html
@@ -8,17 +8,10 @@
     Community Action for Clean Air project coordinated by Duwamish River
     Cleanup Coalition (DRCC). We will be partnering with the DRCC and Urban
     Systems Design’s program “Duwamish Infrastructure Restoration Training”
-    (DIRT Corps) to implement the project.</p>
+    (DIRT Corps) to implement the project.
      
-    <p>After talking to a few residents at community workshops this fall about
-    different types of actionable projects that could reduce air pollution in
-    the neighborhoods, we heard you say that installing a “green screen” was
-    the most exciting option (a detailed description of what a green screen is
-    below). We now need your feedback about where you would like this green
-    screen to go.  Though we have spoken to some residents already, we want to
-    make sure we hear as many voices as possible before deciding on the final
-    locations (one location per neighborhood). More information about the
-    details of the project are listed below the instructions.</p>
+<p>After talking to a few residents at community workshops this fall about different types of actionable projects that could reduce air pollution in the neighborhoods, we heard you say that installing a “green screen” was the most exciting option (a detailed description of what a green screen is
+below). We now need your feedback about where you would like this green screen to go.  Though we have spoken to some residents already, we want to make sure we hear as many voices as possible before deciding on the final locations (one location per neighborhood). More information about the details of the project are listed below the instructions.</p>
     
     <p><strong>To add your green screen location nomination to the map:</strong></p>
 
@@ -29,14 +22,16 @@
 </ul>
 
     <a href="#" id="add-place" class="btn btn-block btn-primary btn-large"><span>Add a report to the map!</span></a>
+    <img src="/static/css/images/marker-drop_screenshot.jpg" alt="Location pin">
+    <img src="/static/css/images/screenshot_greenscreen_dropdown.jpg" alt="Green Screen Vote - Dropdown Menu">
   <br>    
     <p>Feel free to comment on other Green Screen votes that others have chosen
     to help guide the community process. To comment on other nominations just
     click on the pin and a comment window will open to the right.</p>
     
-    <p>For those folks not familiar with the project, here is some more
+    For those folks not familiar with the project, here is some more
     information.</p>
-     
+<img src="/static/css/images/greenscreen_example.png" alt="Green screen example" style="float:left;margin:0 5px 0 0;" />  
     <h3>What is a green screen?</h3>
     <p>A green screen is a metal frame structure that will support the growth
     of native and fast growing vines (no invasive species will be used).  In
