fix wrong email

--- a/src/flavors/duwamish_flavor/jstemplates/pages/greenscreen.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/greenscreen.html
@@ -73,7 +73,7 @@ below). We now need your feedback about where you would like this green screen t
      
     <p>If you have any additional questions, or would like more information,
     you can contact us at:</p>
-    <p>Linn Gould - info@justhealthaction.org</p>
+    <p>Linn Gould - gouldjha@gmail.com</p>
     <p>Andrew Schiffer - bricktree66@gmail.com</p>
 
 <img src="/static/css/images/kclogo.gif" alt="King County">
