Rename 'visible' to 'visibleDefault' in map layer config

--- a/src/sa_web/jstemplates/legend.html
+++ b/src/sa_web/jstemplates/legend.html
@@ -20,7 +20,7 @@
       <li class="layer-type-li">
         <div class="layer-type-title">
           <input id="map-{{ id }}" data-layerid="{{ id }}"
-                 {{#if visible}}
+                 {{#if visibleDefault}}
                  checked="checked"
                  {{/if}}
                  class="map-legend-checkbox" type="checkbox"></input>
