Published with https://stackedit.io/

--- a/src/flavors/duwamish_flavor/jstemplates/pages/swim.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/swim.html
@@ -5,3 +5,7 @@
 
 
 <h1 id="this-is-a-markdown-document">this is a <em>markdown</em> document</h1>
+
+<iframe title="YouTube video player" src="http://www.youtube.com/watch?v=TheVideoID?autoplay=1" allowfullscreen="" height="390" width="480"></iframe>
+
+<p>with a <strong>youtube</strong> video embedded</p>
