--- a/src/flavors/defaultflavor/jstemplates/pages/overview.html
+++ b/src/flavors/defaultflavor/jstemplates/pages/overview.html
@@ -1,22 +1,9 @@
-<h1>About</h1>
+<h1>{{#_}}Welcome{{/_}}</h1>
 
-<p>Hello! You're looking at a demo of {{ config.app.name }}, a mapping project from <a
-  href="http://openplans.org">OpenPlans</a>.</p>
+<p>{{#_}}We are a community of residents and stakeholders who are monitoring important issues in our community.{{/_}}</p>
 
-<p>Shareabouts is a simple web app for crowdsourced mapping. You can use it to
-  collect public input on maps - for example, where should a new park be built?
-  Which bus stops need a new shelter? People can put dots on the map, add
-  comments, discuss other people's suggestions and share locations over social
-  networks.</p>
+<ul>
+<li>{{#_}}Help us out and <a href="/place/new">submit a report</a> on the map!{{/_}}</li>
+</ul>
 
-<p>In this demo here, we're collecting info on good places to eat near our
-  office. But you could use it for anything.</p>
-
-<p>Read more about Shareabouts at <a
-  href="http://openplans.org/shareabouts/">shareabouts.org</a>, or head to <a
-  href="https://github.com/openplans/shareabouts/">Shareabouts on github</a>.
-  The project is <a href="https://github.com/openplans/shareabouts/">open
-  source</a>, and we welcome your involvement. You can run Shareabouts on
-  DotCloud, Heroku, and similar.</p>
-
-<p class="btn btn-block btn-large close-btn">Get started!</p>
+<p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
