--- a/src/flavors/bridges/jstemplates/pages/overview.html
+++ b/src/flavors/bridges/jstemplates/pages/overview.html
@@ -1,9 +1,14 @@
-<h1>{{#_}}Welcome{{/_}}</h1>
+<h1>{{#_}}Hello!{{/_}}</h1>
 
-<p>{{#_}}We are a community of residents and stakeholders who are monitoring important issues in our community.{{/_}}</p>
+<p>{{#_}}The residents of Georgetown have an opportunity to improve their waterfront access points. We are collaborating with the community to do a King County Waterworks grant to imporve either:{{/_}}</p>
 
 <ul>
-<li>{{#_}}Help us out and <a href="/place/new">submit a report</a> on the map!{{/_}}</li>
+<li>The 1st Avenue Bridge</li>
+<li>8th Avenue South</li>
+<li>The South Park Bridge (16th ave s.)</li>
 </ul>
 
-<p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
+<a href=""><h2>Place a comment on the map</h2></a>
+<p>And add some information on where you'd like us to focus our efforts</p>
+
+<p class="btn btn-block btn-large close-btn">{{#_}}OK Got it!{{/_}}</p>
