update map layer icons and order

--- a/src/flavors/bridges/jstemplates/pages/overview.html
+++ b/src/flavors/bridges/jstemplates/pages/overview.html
@@ -8,7 +8,7 @@
 <li>The South Park Bridge (16th ave s.)</li>
 </ul>
 
-<a href=""><h2>Place a comment on the map</h2></a>
+<a href="/place/new"><h4>Place a comment on the map</h4></a>
 <p>And add some information on where you'd like us to focus our efforts</p>
 
 <p class="btn btn-block btn-large close-btn">{{#_}}OK Got it!{{/_}}</p>
