Sidebar groupings; config.yml sidebar refactoring
- config.yml sidebar object refactored to contain more presentational
  controls for the panels on the sidebar
  - chiefest among these changes: gis layers panel can now group
    layers together
- js views, html templates updated to be populated from the new
  config.yml changes

--- a/src/sa_web/jstemplates/gis-legend-content.html
+++ b/src/sa_web/jstemplates/gis-legend-content.html
@@ -1,25 +1,32 @@
-<!-- leaflet-sidebar-view: GIS: needs layers and mapview, not reports -->
-
 <!-- MAP LAYERS -->
 
 <ul class="layer-type-list unstyled-list">
-  {{# layers.items }}
+  {{# groupings}}
     {{#if legend}}
-      <li class="layer-type-li">
-        <div class="layer-type-title">
-          <input id="map-{{ id }}" data-layerid="{{ id }}"
-                 {{#if visibleDefault}}
-                 checked="checked"
-                 {{/if}}
-                 class="map-legend-checkbox" type="checkbox"></input>
-          <label for="map-{{ id }}">{{ title }}</label>
-        </div>
-        <span class="layer-type-description">{{ description }}
-          {{#if description-image}}
-            <img src="{{ description-image }}" alt="{{ description-image-alt }}">
-          {{/if}}
-        </span>
+      <li class="layer-type-grouping">
+        <label>{{ title }}
+        <ul class="layer-type-grouping-list unstyled-list">
+          {{# layers}}
+            {{# if legend}}
+              <li class="layer-type-li">
+                <div class="layer-type-title">
+                  <input id="map-{{ id }}" data-layerid="{{ id }}"
+                         {{#if visibleDefault}}
+                         checked="checked"
+                         {{/if}}
+                         class="map-legend-checkbox" type="checkbox"></input>
+                  <label for="map-{{ id }}">{{ title }}</label>
+                </div>
+                <span class="layer-type-description">{{ description }}
+                  {{#if description-image}}
+                    <img src="{{ description-image }}" alt="{{ description-image-alt }}">
+                  {{/if}}
+                </span>
+              </li>
+            {{/if}}
+          {{/layers}}
+        </ul>
       </li>
     {{/if}}
-  {{/ layers.items }}
+  {{/ groupings }}
 </ul>
