--- a/src/sa_web/jstemplates/legend.html
+++ b/src/sa_web/jstemplates/legend.html
@@ -1,14 +1,12 @@
-<!-- Legend: needs reports, not layers -->
-
 
 <!-- SHAREABOUTS LAYERS -->
 <ul class="master-layer-list unstyled-list">
-  {{# reports.items }}
+  {{# items }}
     <li class="shareabouts-layer-li legend-layer-li">
         <img class="shareabouts-layer-title" location="{{ title }}" layer-title="{{ title }}" src="{{ image }}">
         {{ title }}
     </li>
 
-  {{/reports.items }}
+  {{/items }}
 
 </ul>
