update about page info with official content

--- a/src/flavors/waterfront/jstemplates/pages/overview.html
+++ b/src/flavors/waterfront/jstemplates/pages/overview.html
@@ -1,14 +1,21 @@
 <h1>{{#_}}Hello!{{/_}}</h1>
 
-<p>{{#_}}The residents of Georgetown have an opportunity to improve their waterfront access points. We are collaborating with the community to do a King County Waterworks grant to imporve either:{{/_}}</p>
+<p>{{#_}}The Georgetown Community Council, King County and the City of Seattle are interested in jointly pursuing a King County WaterWorks grant to design for better community access to the river and less polluted stormwater runoff in the Georgetown neighborhood.{{/_}}</p>
+
+<p>We've discussed three possible focus areas for the grant:</p>
 
 <ul>
-<li>The 1st Avenue Bridge</li>
-<li>8th Avenue South</li>
-<li>The South Park Bridge (16th ave s.)</li>
+<li>The 1st Avenue Bridge area</li>
+<li>8th Avenue South to Gateway North Park</li>
+<li>16th Avenue South to the South Park bridge</li>
 </ul>
 
+<p>In your opinion, which area offers the best opportunity for improvement/access and why?
+<br>
+<br>
+Is there another location you'd like to suggest and why?</p>
+
 <a href="/place/new"><h4>Place a comment on the map</h4></a>
-<p>And add some information on where you'd like us to focus our efforts</p>
+<p>and share your thoughts.</p>
 
 <p class="btn btn-block btn-large close-btn">{{#_}}OK Got it!{{/_}}</p>
